[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc2023"

[[bin]]
name = "aoc2023"

[dependencies]
rayon = "1"
regex = "1"
anyhow = "1"
termcolor = "1"
itertools = "0.12.0"
nom = "7.1.3"
chrono = "0.4.31"
dotenv = "0.15.0"
dialoguer = "0.11.0"
ureq = { version = "2.9.1", features = ["cookies", "gzip"] }

[dev-dependencies]
criterion = "0.4"

[[bench]]
harness = false
name = "day01"

[[bench]]
harness = false
name = "day02"

[[bench]]
harness = false
name = "day03"

[[bench]]
harness = false
name = "day04"

[[bench]]
harness = false
name = "day05"

[[bench]]
harness = false
name = "day06"

[[bench]]
harness = false
name = "day07"

[[bench]]
harness = false
name = "day08"

[[bench]]
harness = false
name = "day09"

[[bench]]
harness = false
name = "day10"

[[bench]]
harness = false
name = "day11"

